--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
             <h2>Desenvolvedora</h2>
         </section>
         
-
-        <section id="projetos" class="light container">
+    
+        <section class="light container">
             <div class="projects-header">
                 <img class="imagem-projeto" src="imagens/Lampada_rosa.jpg" alt="imagem de uma lampada formato estrela cor de rosa e azul para representar todos os projetos">
                 <h3>Projetos</h3>
@@ -65,12 +65,13 @@
             <p>Diga Olá!</p>
             <ul>
                 <li><a class="email" href="mailto:barbaramy_@hotmail.com" target="_blank">E-mail</a></li>
-                <li><a class="twitter" href="https://twitter.com/lanyablue" target="_blank">Twitter</a></li>
+                <li><a class="twitter" href="https://twitter.com/barbiemichelle_" target="_blank">Twitter</a></li>
                 <li><a class="github" href="https://github.com/lanyablue" target="_blank">Github</a></li>
                 <li><a class="facebook" href="https://www.facebook.com/barbaracodifica/" target="_blank">Facebook</a></li>
                 <li><a class="linkedin" href="https://www.linkedin.com/in/barbmichelle/" target="_blank">Linkedin</a></li>
             </ul>
         </section>
+
         <footer class="dark container"> 
             <p>© Barbara Michelle 2022</p>
         </footer>
